Bug 91542 - FORMATTING: Line box width cannot be changed and custom width causes DRAW to crash
Summary: FORMATTING: Line box width cannot be changed and custom width causes DRAW to ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, regression
: 91536 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-23 18:59 UTC by Juanjo
Modified: 2016-10-25 19:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Trying to set box line custom width causes DRAW to crash (32.52 KB, image/png)
2015-05-23 18:59 UTC, Juanjo
Details
test file (76.77 KB, application/zip)
2015-05-26 11:54 UTC, Noel Grandin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juanjo 2015-05-23 18:59:08 UTC
Created attachment 115910 [details]
Trying to set box line custom width causes DRAW to crash

Steps:
1. New Draw document
2. Add a box element
3. Select it
4. Try to change its line (border) width
Result: drop down list appears but no selection is applied to the box
5. Change line width by setting a custom width and hit ENTER key
Result: DRAW crashes
Comment 1 Michael 2015-05-23 19:18:40 UTC
Confirmed on linux; bibisected

$ git bisect log
# bad: [d67744510bde72a6e30f782eca1be1eb79be3576] 2015-05-03: source-hash-d2ab54bb0d07d285c91a8ac17f53559e438d042a
# good: [89656db079b664f7825750677c9f4a73c26dd2c0] 2015-04-25: source-hash-daa28969374f628a8cb265fcb28a73daabcb7236
git bisect start 'd67744510bde72a6e30f782eca1be1eb79be3576' '89656db079b664f7825750677c9f4a73c26dd2c0'
# bad: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
git bisect bad 06421cdb5e5880c2f8232a04f521a341edf08de3
# good: [1042e18eb884e17cbdd170a589d3c6db21455c01] 2015-04-27: source-hash-f0edb677f09ad338e22ac3b5d91497b4479e0b3c
git bisect good 1042e18eb884e17cbdd170a589d3c6db21455c01
# good: [af526ee52f2c296e0f17bc385d4001b9322818e7] 2015-04-28: source-hash-4fee05e680217e876210b341f904df9441a0b7cd
git bisect good af526ee52f2c296e0f17bc385d4001b9322818e7
# first bad commit: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
Comment 2 Noel Grandin 2015-05-26 11:54:06 UTC
Created attachment 116048 [details]
test file

Test file from moggi,
go into chart edit mode,
select chart,
right click,
Data Table,
close dialog,
crash in dbgutil builds
Comment 3 Noel Grandin 2015-05-26 12:27:05 UTC
Ignore my attachment and my last comment, wrong bug.
Comment 4 Commit Notification 2015-05-26 16:00:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2efb9d3c9841397cca3a66714504ee25d2120bd2

Related: tdf#91542 line box width cannot be changed

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-05-26 16:02:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d4d89b6687fe7c735b22e56175abd2de2133798&h=libreoffice-5-0

Related: tdf#91542 line box width cannot be changed

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-05-26 16:35:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a6aa95a7af11eb091dfa9494cd810998b2e324d

Resolves: tdf#91542 crash on pressing return in sidebar line popup

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-05-26 16:36:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de2d7448736384dfdab667a86330fcec37116c94&h=libreoffice-5-0

Resolves: tdf#91542 crash on pressing return in sidebar line popup

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Katarina Behrens (Inactive) 2015-05-26 21:12:13 UTC
*** Bug 91536 has been marked as a duplicate of this bug. ***
Comment 9 Gauthier 2015-08-13 10:17:24 UTC
Hello,

I'm using LO 5.0.0.5 and this bug still affects me, and on any lines (i.e. box contour, arrows, etc.). 
If I use the properties side bar to change line width, Draw either freeze then crash, or crash directly. If I right click on a line to edit its properties and change width from there, Draw behaves normally.

LO 5.0.0.5
Kubuntu 15.04 x64
Plasma 5.3.2
Comment 10 Maxim Monastirsky 2015-08-13 10:41:23 UTC
Hi Gauthier,

Please *never* reopen bugs. You should open a new bug for your problem instead. Thanks.
Comment 11 Gauthier 2015-08-13 10:44:43 UTC
Very sorry, will do. Thanks
Comment 12 Robinson Tryon (qubit) 2015-12-17 09:12:20 UTC Comment hidden (obsolete)