Related: tdf#91542 line box width cannot be changed

Change-Id: Ibbeefcff785ee76a1a7ce46d98c1006fc8fe46fc